--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,10 +8,26 @@
                 font-family: dotum;
                 line-height: 1.6em;
             }
+            body.black {
+                background-color: black;
+                color: white;
+            }
+            body.black a {
+                color: white;
+            }
+            body.black a:hover {
+                color: #f60;
+            }
+            body.black header {
+                border-bottom: 1px solid #333;
+            }
+            body.black nav {
+                border-right: 1px solid #333;
+            }
             header {
-                border-bottom: 1px solid red;
+                border-bottom: 1px solid #ccc;
                 padding: 20px 0;
-           }
+            }
             #toolbar {
                 padding: 10px;
                 float: right;
@@ -31,6 +46,9 @@
             article {
                 float: left;
             }
+            footer {
+                clear: both;
+            }
             a {
                 text-decoration: none;
             }
@@ -46,14 +64,14 @@
         </style>
     </head>
  
-    <body>
+    <body id="body">
         <div>
             <header>
                 <h1>JavaScript</h1>
             </header>
             <div id="toolbar">
-                <input type="button" value="black" />
-                <input type="button" value="white" />
+                <input type="button" value="black" onclick="document.getElementById('body').className='black'" />
+                <input type="button" value="white" onclick="document.getElementById('body').className='white'" />
             </div>
             <nav>
                 <ul>
